--- a/vanilla_js/todoapp/index.html
+++ b/vanilla_js/todoapp/index.html
@@ -3,11 +3,32 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=divece-width, initial-scale=1.0">
-    <title>Vanilla JS Todo App</title>
+    <title>Vanilla JavaScript Todo App</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" />
   </head>
   <body class="contaniner">
-    <h1>Vanilla JS Todo App</h1>
+    <header class="logo">
+      <a href="https://ko.javascript.info/" target="_blank">
+        <img class="logo" src="images/js_javascript.png" alt="javascript.info">
+      </a>
+      <h2 class="headline">Vanilla JavaScript Todo App</h2>
+
+    </header>
+
+    <div class="main">
+      <form>
+        <input type="text" placeholder="New Task...">
+        <button type="submit"><i class="fas fa-plus-square"></i></button>
+      </form>
+
+      <div class="todoList">
+        <ul></ul>
+        <a class="clearAll" id="clearAll">Clear All</a>
+      </div>
+    </div>
+
 
     <script type="text/javascript" src="app.js"></script>
   </body>
