--- a/_study/learn_PHP/php/00_syntax.html
+++ b/_study/learn_PHP/php/00_syntax.html
@@ -8,7 +8,14 @@
   <title>Document</title>
 </head>
 <body>
-Hello World
-<!--Echo HTML tags-->
+<?php
+  echo "Hello, world!";
+  echo " and PHP";
+?>
+
+<?php
+  echo '<br>';
+  echo 'Hello from another tag';
+?>
 </body>
 </html>
