--- a/flask/flask-web-service-inflearn/02_웹 기초/01_html/03_form.html
+++ b/flask/flask-web-service-inflearn/02_웹 기초/01_html/03_form.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>HTML for python flask</title>
+    <title>Document</title>
   </head>
   <body>
     <h1>회원 가입 페이지입니다.</h1>
