--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>instagram</title>
 
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/main.js"></script>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
