--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/follow.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/follow.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <title>instagram</title>
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/instagram.png">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/instagram.png">
   </head>
   <body>
 
