--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/post.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/post.html
@@ -2,7 +2,7 @@
   <header class="top">
     <div class="user_container">
       <div class="profile_img">
-        <img src="images/thumb.jpeg" alt="프로필이미지" />
+        <img src="./images/thumb.jpeg" alt="프로필이미지" />
       </div>
       <div class="user_name">
         <div class="nick_name m_text">KindTiger</div>
@@ -15,7 +15,7 @@
 
   <div class="img_section">
     <div class="trans_inner">
-      <div><img src="images/img_section/img01.jpg" alt="visual01" /></div>
+      <div><img src="./images/img_section/img01.jpg" alt="visual01" /></div>
     </div>
   </div>
 
