--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
@@ -2,6 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>instagram</title>
 
     <link rel="stylesheet" href="./css/reset.css" />
@@ -20,7 +22,7 @@
           </h1>
 
           <div class="search_box">
-            <input type="text" placeholder="검색" id="search-field">
+            <input type="text" placeholder="검색" id="search-field" />
             <div class="fake_field">
               <span class="sprite_small_search_icon"></span>
               <span>검색</span>
@@ -37,7 +39,50 @@
       </header>
 
       <div class="hidden_menu">
+        <div class="scroll_inner">
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
 
+          <!-- 이하 히든 메뉴 사용자 중복 내용 -->
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+          <div class="user">
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="id">kind_tigerrrr</div>
+          </div>
+        </div>
       </div>
 
       <section id="main_container">
@@ -47,7 +92,7 @@
               <header class="top">
                 <div class="user_container">
                   <div class="profile_img">
-                    <img src="./images/thumb.jpeg" alt="프로필이미지">
+                    <img src="./images/thumb.jpeg" alt="프로필이미지" />
                   </div>
                   <div class="user_name">
                     <div class="nick_name m_text">KindTiger</div>
@@ -60,7 +105,7 @@
               <div class="img_section">
                 <div class="trans_inner">
                   <div>
-                    <img src="./images/img_section/img01.jpg" alt="visual01">
+                    <img src="./images/img_section/img01.jpg" alt="visual01" />
                   </div>
                 </div>
               </div>
@@ -79,16 +124,14 @@
                 </div>
               </div>
 
-              <div class="likes m_text">
-                좋아요 <span id="count">2,345</span> 개
-              </div>
+              <div class="likes m_text">좋아요 <span id="count">2,345</span> 개</div>
 
               <div class="comment_container">
                 <div class="comment">
                   <div class="comment-detail">
                     <div class="nick_name m_text">dongdong2</div>
                     <div>강아지가 너무 귀여워요~!</div>
-                </div>
+                  </div>
                 </div>
                 <div class="small_heart">
                   <div class="sprite_small_heart_icon_outline"></div>
@@ -98,16 +141,301 @@
               <div class="timer">1시간 전</div>
 
               <div class="comment_field">
-                <input type="text" placeholder="댓글달기...">
+                <input type="text" placeholder="댓글달기..." />
                 <div class="upload_btn m_text" data-name="comment">게시</div>
               </div>
             </article>
+
+            <!-- 이하 메인 콘텐츠 중복 내용 -->
+            <article class="contents">
+              <header class="top">
+                <div class="user_container">
+                  <div class="profile_img">
+                    <img src="./images/thumb.jpeg" alt="프로필이미지" />
+                  </div>
+                  <div class="user_name">
+                    <div class="nick_name m_text">KindTiger</div>
+                    <div class="country s_text">Seoul, South Korea</div>
+                  </div>
+                </div>
+                <div class="sprite_more_icon" data-name="more"></div>
+              </header>
+
+              <div class="img_section">
+                <div class="trans_inner">
+                  <div>
+                    <img src="./images/img_section/img01.jpg" alt="visual01" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="bottom_icons">
+                <div class="left_icons">
+                  <div class="heart_btn">
+                    <div class="sprite_heart_icon_outline" name="39" data-name="heartbeat"></div>
+                    <div class="sprite_bubble_icon"></div>
+                    <div class="sprite_share_icon" data-name="share"></div>
+                  </div>
+                </div>
+
+                <div class="right_icon">
+                  <div class="sprite_bookmark_outline" data-name="bookmark"></div>
+                </div>
+              </div>
+
+              <div class="likes m_text">좋아요 <span id="count">2,345</span> 개</div>
+
+              <div class="comment_container">
+                <div class="comment">
+                  <div class="comment-detail">
+                    <div class="nick_name m_text">dongdong2</div>
+                    <div>강아지가 너무 귀여워요~!</div>
+                  </div>
+                </div>
+                <div class="small_heart">
+                  <div class="sprite_small_heart_icon_outline"></div>
+                </div>
+              </div>
+
+              <div class="timer">1시간 전</div>
+
+              <div class="comment_field">
+                <input type="text" placeholder="댓글달기..." />
+                <div class="upload_btn m_text" data-name="comment">게시</div>
+              </div>
+            </article>
+            <article class="contents">
+              <header class="top">
+                <div class="user_container">
+                  <div class="profile_img">
+                    <img src="./images/thumb.jpeg" alt="프로필이미지" />
+                  </div>
+                  <div class="user_name">
+                    <div class="nick_name m_text">KindTiger</div>
+                    <div class="country s_text">Seoul, South Korea</div>
+                  </div>
+                </div>
+                <div class="sprite_more_icon" data-name="more"></div>
+              </header>
+
+              <div class="img_section">
+                <div class="trans_inner">
+                  <div>
+                    <img src="./images/img_section/img01.jpg" alt="visual01" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="bottom_icons">
+                <div class="left_icons">
+                  <div class="heart_btn">
+                    <div class="sprite_heart_icon_outline" name="39" data-name="heartbeat"></div>
+                    <div class="sprite_bubble_icon"></div>
+                    <div class="sprite_share_icon" data-name="share"></div>
+                  </div>
+                </div>
+
+                <div class="right_icon">
+                  <div class="sprite_bookmark_outline" data-name="bookmark"></div>
+                </div>
+              </div>
+
+              <div class="likes m_text">좋아요 <span id="count">2,345</span> 개</div>
+
+              <div class="comment_container">
+                <div class="comment">
+                  <div class="comment-detail">
+                    <div class="nick_name m_text">dongdong2</div>
+                    <div>강아지가 너무 귀여워요~!</div>
+                  </div>
+                </div>
+                <div class="small_heart">
+                  <div class="sprite_small_heart_icon_outline"></div>
+                </div>
+              </div>
+
+              <div class="timer">1시간 전</div>
+
+              <div class="comment_field">
+                <input type="text" placeholder="댓글달기..." />
+                <div class="upload_btn m_text" data-name="comment">게시</div>
+              </div>
+            </article><article class="contents">
+              <header class="top">
+                <div class="user_container">
+                  <div class="profile_img">
+                    <img src="./images/thumb.jpeg" alt="프로필이미지" />
+                  </div>
+                  <div class="user_name">
+                    <div class="nick_name m_text">KindTiger</div>
+                    <div class="country s_text">Seoul, South Korea</div>
+                  </div>
+                </div>
+                <div class="sprite_more_icon" data-name="more"></div>
+              </header>
+
+              <div class="img_section">
+                <div class="trans_inner">
+                  <div>
+                    <img src="./images/img_section/img01.jpg" alt="visual01" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="bottom_icons">
+                <div class="left_icons">
+                  <div class="heart_btn">
+                    <div class="sprite_heart_icon_outline" name="39" data-name="heartbeat"></div>
+                    <div class="sprite_bubble_icon"></div>
+                    <div class="sprite_share_icon" data-name="share"></div>
+                  </div>
+                </div>
+
+                <div class="right_icon">
+                  <div class="sprite_bookmark_outline" data-name="bookmark"></div>
+                </div>
+              </div>
+
+              <div class="likes m_text">좋아요 <span id="count">2,345</span> 개</div>
+
+              <div class="comment_container">
+                <div class="comment">
+                  <div class="comment-detail">
+                    <div class="nick_name m_text">dongdong2</div>
+                    <div>강아지가 너무 귀여워요~!</div>
+                  </div>
+                </div>
+                <div class="small_heart">
+                  <div class="sprite_small_heart_icon_outline"></div>
+                </div>
+              </div>
+
+              <div class="timer">1시간 전</div>
+
+              <div class="comment_field">
+                <input type="text" placeholder="댓글달기..." />
+                <div class="upload_btn m_text" data-name="comment">게시</div>
+              </div>
+            </article><article class="contents">
+              <header class="top">
+                <div class="user_container">
+                  <div class="profile_img">
+                    <img src="./images/thumb.jpeg" alt="프로필이미지" />
+                  </div>
+                  <div class="user_name">
+                    <div class="nick_name m_text">KindTiger</div>
+                    <div class="country s_text">Seoul, South Korea</div>
+                  </div>
+                </div>
+                <div class="sprite_more_icon" data-name="more"></div>
+              </header>
+
+              <div class="img_section">
+                <div class="trans_inner">
+                  <div>
+                    <img src="./images/img_section/img01.jpg" alt="visual01" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="bottom_icons">
+                <div class="left_icons">
+                  <div class="heart_btn">
+                    <div class="sprite_heart_icon_outline" name="39" data-name="heartbeat"></div>
+                    <div class="sprite_bubble_icon"></div>
+                    <div class="sprite_share_icon" data-name="share"></div>
+                  </div>
+                </div>
+
+                <div class="right_icon">
+                  <div class="sprite_bookmark_outline" data-name="bookmark"></div>
+                </div>
+              </div>
+
+              <div class="likes m_text">좋아요 <span id="count">2,345</span> 개</div>
+
+              <div class="comment_container">
+                <div class="comment">
+                  <div class="comment-detail">
+                    <div class="nick_name m_text">dongdong2</div>
+                    <div>강아지가 너무 귀여워요~!</div>
+                  </div>
+                </div>
+                <div class="small_heart">
+                  <div class="sprite_small_heart_icon_outline"></div>
+                </div>
+              </div>
+
+              <div class="timer">1시간 전</div>
+
+              <div class="comment_field">
+                <input type="text" placeholder="댓글달기..." />
+                <div class="upload_btn m_text" data-name="comment">게시</div>
+              </div>
+            </article><article class="contents">
+              <header class="top">
+                <div class="user_container">
+                  <div class="profile_img">
+                    <img src="./images/thumb.jpeg" alt="프로필이미지" />
+                  </div>
+                  <div class="user_name">
+                    <div class="nick_name m_text">KindTiger</div>
+                    <div class="country s_text">Seoul, South Korea</div>
+                  </div>
+                </div>
+                <div class="sprite_more_icon" data-name="more"></div>
+              </header>
+
+              <div class="img_section">
+                <div class="trans_inner">
+                  <div>
+                    <img src="./images/img_section/img01.jpg" alt="visual01" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="bottom_icons">
+                <div class="left_icons">
+                  <div class="heart_btn">
+                    <div class="sprite_heart_icon_outline" name="39" data-name="heartbeat"></div>
+                    <div class="sprite_bubble_icon"></div>
+                    <div class="sprite_share_icon" data-name="share"></div>
+                  </div>
+                </div>
+
+                <div class="right_icon">
+                  <div class="sprite_bookmark_outline" data-name="bookmark"></div>
+                </div>
+              </div>
+
+              <div class="likes m_text">좋아요 <span id="count">2,345</span> 개</div>
+
+              <div class="comment_container">
+                <div class="comment">
+                  <div class="comment-detail">
+                    <div class="nick_name m_text">dongdong2</div>
+                    <div>강아지가 너무 귀여워요~!</div>
+                  </div>
+                </div>
+                <div class="small_heart">
+                  <div class="sprite_small_heart_icon_outline"></div>
+                </div>
+              </div>
+
+              <div class="timer">1시간 전</div>
+
+              <div class="comment_field">
+                <input type="text" placeholder="댓글달기..." />
+                <div class="upload_btn m_text" data-name="comment">게시</div>
+              </div>
+            </article>
+
           </div>
 
           <div class="side_box">
             <div class="user_profile">
               <div class="profile_thumb">
-                <img src="./images/thumb.jpeg" alt="프로필사진">
+                <img src="./images/thumb.jpeg" alt="프로필사진" />
               </div>
               <div class="detail">
                 <div class="id m_text">KindTiger</div>
@@ -123,7 +451,18 @@
               <div class="scroll_inner">
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진">
+                    <img src="./images/thumb02.jpg" alt="프로필사진" />
+                  </div>
+                  <div class="detail">
+                    <div class="id">kind_tigerrrr</div>
+                    <div class="time">1시간 전</div>
+                  </div>
+                </div>
+
+                <!-- 이하 사용자 썸네일 중복 내용 -->
+                <div class="thumb_user">
+                  <div class="profile_thumb">
+                    <img src="./images/thumb02.jpg" alt="프로필사진" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -132,7 +471,7 @@
                 </div>
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진">
+                    <img src="./images/thumb02.jpg" alt="프로필사진" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -141,7 +480,7 @@
                 </div>
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진">
+                    <img src="./images/thumb02.jpg" alt="프로필사진" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -150,16 +489,7 @@
                 </div>
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진">
-                  </div>
-                  <div class="detail">
-                    <div class="id">kind_tigerrrr</div>
-                    <div class="time">1시간 전</div>
-                  </div>
-                </div>
-                <div class="thumb_user">
-                  <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진">
+                    <img src="./images/thumb02.jpg" alt="프로필사진" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -177,7 +507,18 @@
 
               <div class="thumb_user">
                 <div class="profile_thumb">
-                  <img src="./images/thumb02.jpg" alt="프로필사진">
+                  <img src="./images/thumb02.jpg" alt="프로필사진" />
+                </div>
+                <div class="detail">
+                  <div class="id">kind_tigerrrr</div>
+                  <div class="time">1시간 전</div>
+                </div>
+              </div>
+
+              <!-- 이하 사용자 썸네일 중복 내용 -->
+              <div class="thumb_user">
+                <div class="profile_thumb">
+                  <img src="./images/thumb02.jpg" alt="프로필사진" />
                 </div>
                 <div class="detail">
                   <div class="id">kind_tigerrrr</div>
@@ -186,7 +527,7 @@
               </div>
               <div class="thumb_user">
                 <div class="profile_thumb">
-                  <img src="./images/thumb02.jpg" alt="프로필사진">
+                  <img src="./images/thumb02.jpg" alt="프로필사진" />
                 </div>
                 <div class="detail">
                   <div class="id">kind_tigerrrr</div>
