--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/login.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/login.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>instagram</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>instagram - clone</title>
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
