--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/post.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/post.html
@@ -33,13 +33,15 @@
   </div>
 
   <div class="likes m_text">
-    좋아요 <span class="count">2,346</span> 개
+    <span class="count">좋아요 2,346개</span>
   </div>
 
   <div class="comment_container">
     <div class="comment">
-      <div class="nick_name m_text">dongdong2</div>
-      <div>강아지가 너무 귀여워요~!</div>
+      <div class="comment-detail">
+        <div class="nick_name m_text">dongdong2</div>
+        <div>강아지가 너무 귀여워요~!</div>
+      </div>
     </div>
     <div class="small_heart">
       <div class="sprite_small_heart_icon_outline"></div>
