--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
@@ -30,10 +30,10 @@
           </div>
 
           <div class="right_icons">
-            <div class="sprite_camera_icon"></div>
-            <div class="sprite_compass_icon"></div>
-            <div class="sprite_heart_icon_outline"></div>
-            <div class="sprite_user_icon_outline"></div>
+            <a href="new_post.html"><div class="sprite_camera_icon"></div></a>
+            <a href="login.html"><div class="sprite_compass_icon"></div></a>
+            <a href="follow.html"><div class="sprite_heart_icon_outline"></div></a>
+            <a href="profile.html"><div class="sprite_user_icon_outline"></div></a>
           </div>
         </section>
       </header>
