--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
@@ -13,7 +13,7 @@
   <body>
     <section id="container">
       <header id="header">
-        <section class="inner">
+        <section class="h_inner">
           <h1 class="logo">
             <a href="./index.html">
               <div class="sprite_insta_icon"></div>
@@ -86,7 +86,7 @@
       </div>
 
       <section id="main_container">
-        <div class="inner">
+        <div class="b_inner">
           <div class="contents_box">
             <article class="contents">
               <header class="top">
