--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/detail-page.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/detail-page.html
@@ -44,17 +44,14 @@
       <header id="header">
         <section class="h_inner">
           <h1 class="logo">
-            <a href="index.html">
+            <a href="./index.html">
               <div class="sprite_insta_icon"></div>
-              <div>
-                <div class="sprite_write_logo"></div>
-              </div>
+              <div class="sprite_write_logo"></div>
             </a>
           </h1>
 
-          <div class="search_field">
-            <input type="text" placeholder="검색" tabindex="0" />
-
+          <div class="search_box">
+            <input type="text" placeholder="검색" id="search-field" />
             <div class="fake_field">
               <span class="sprite_small_search_icon"></span>
               <span>검색</span>
