--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
@@ -38,15 +38,12 @@
           <h1 class="logo">
             <a href="./index.html">
               <div class="sprite_insta_icon"></div>
-              <div>
-                <div class="sprite_write_logo"></div>
-              </div>
+              <div class="sprite_write_logo"></div>
             </a>
           </h1>
 
-          <div class="search_field">
-            <input type="text" placeholder="검색" tabindex="0" />
-
+          <div class="search_box">
+            <input type="text" placeholder="검색" id="search-field" />
             <div class="fake_field">
               <span class="sprite_small_search_icon"></span>
               <span>검색</span>
@@ -54,10 +51,10 @@
           </div>
 
           <div class="right_icons">
-            <a href="./new_post.html"><div class="sprite_camera_icon"></div></a>
-            <a href="./login.html"><div class="sprite_compass_icon"></div></a>
-            <a href="./follow.html"><div class="sprite_heart_icon_outline"></div></a>
-            <a href="./profile.html"><div class="sprite_user_icon_outline"></div></a>
+            <a href="new_post.html"><div class="sprite_camera_icon"></div></a>
+            <a href="login.html"><div class="sprite_compass_icon"></div></a>
+            <a href="follow.html"><div class="sprite_heart_icon_outline"></div></a>
+            <a href="profile.html"><div class="sprite_user_icon_outline"></div></a>
           </div>
         </section>
       </header>
